--- a/views/guest-home.ejs
+++ b/views/guest-home.ejs
@@ -35,6 +35,7 @@
               <li ng-if="restricted.dongvat.create"><a ui-sref="them-dong-vat" href="/app/#!/dong-vat"><%= TEXT.ZOOLOGICAL %></a></li>
               <li ng-if="restricted.thonhuong.create"><a ui-sref="them-tho-nhuong" href="/app/#!/tho-nhuong"><%= TEXT.PEDOLOGICAL %></a></li>
               <li ng-if="restricted.thucvat.create"><a ui-sref="them-thuc-vat" href="/app/#!/thuc-vat"><%= TEXT.BOTANICAL %></a></li>
+              <li ng-if="restricted.nam.create"><a ui-sref="them-nam" href="/app/#!/nam"><%= TEXT.MYCOLOGY %></a></li>
             </ul>
           </li>
           <li class="dropdown" ng-if="restricted">
@@ -45,6 +46,7 @@
               <li ng-if="restricted.dongvat.create"><a ui-sref="quan-ly-dong-vat" href="/app/#!/quan-ly-mau/dong-vat"><%= TEXT.ZOOLOGICAL_SPECIMEN %></a></li>
               <li ng-if="restricted.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong" href="/app/#!/quan-ly-mau/tho-nhuong"><%= TEXT.PEDOLOGICAL_SPECIMEN %></a></li>
               <li ng-if="restricted.thucvat.create"><a ui-sref="quan-ly-thuc-vat" href="/app/#!/quan-ly-mau/thuc-vat"><%= TEXT.BOTANICAL_SPECIMEN %></a></li>
+              <li ng-if="restricted.nam.create"><a ui-sref="quan-ly-nam" href="/app/#!/quan-ly-mau/thuc-vat"><%= TEXT.MYCOLOGICAL_SPECIMEN %></a></li>
             </ul>
           </li>
           <li class="dropdown">
