add Mycology to Map Query

--- a/app/views/map/leaflet-map.html
+++ b/app/views/map/leaflet-map.html
@@ -33,3 +33,4 @@
 <p ng-if="numPaleontological">{{"map.soLuongCoSinh" | translate }}: <span>{{numPaleontological}}</span></p>
 <p ng-if="numSoil">{{"map.soLuongThoNhuong" | translate }}: <span>{{numSoil}}</span></p>
 <p ng-if="numVegetable">{{"map.soLuongThucVat" | translate }}: <span>{{numVegetable}}</span></p>
+<p ng-if="numMycology">{{"map.soLuongNam" | translate }}: <span>{{numMycology}}</span></p>
