update search Mycology

--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -30,6 +30,7 @@
 							<input type="checkbox" name="model" id="dongvat" ng-click="sampleClick('Động vật')" ng-model="searchSample.dongvat" value="dong-vat"> {{"timkiem.dongvat" | translate }}<br>
 							<input type="checkbox" name="model" id="thonhuong" ng-click="sampleClick('Thổ nhưỡng')" ng-model="searchSample.thonhuong" value="tho-nhuong"> {{"timkiem.thonhuong" | translate }}<br>
 							<input type="checkbox" name="model" id="thucvat" ng-click="sampleClick('Thực vật')" ng-model="searchSample.thucvat" value="thuc-vat"> {{"timkiem.thucvat" | translate }}<br>
+							<input type="checkbox" name="model" id="nam" ng-click="sampleClick('Nấm')" ng-model="searchSample.nam" value="nam"> {{"timkiem.nam" | translate }}<br>
 						</form>
 					</div>
 			  	</div>
