update search by maDeTai

--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -35,6 +35,20 @@
 					</div>
 			  	</div>
 			</div>
+			<div class="panel panel-default" ng-if="userLevel == 'admin'">
+				<div class="panel-heading">
+				  <h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion17" href=".collapse17">{{"ani.maDeTai" | translate }}</a>
+				  </h4>
+				</div>
+				<div id="collapse2" class="collapse2 panel-collapse collapse">
+				  <div class="panel-body">
+					  <form ng-submit="searchSample()">
+						  <input type="text" placeholder="{{'timkiem.search' | translate }}" name="" ng-model="searchContent.maDeTai" class="input-form-search">
+					  </form>
+				  </div>
+				</div>
+		  </div>
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
 					<h4 class="panel-title">
